force-app/main/default/objects/clofor_com_cfs__Translation__c/fields/clofor_com_cfs__ja__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ja__c</fullName>
    <description>in Japanese</description>
    <inlineHelpText>in Japanese</inlineHelpText>
    <label>ja</label>
    <length>255</length>
    <type>Text</type>
</CustomField>