force-app/main/default/objects/clofor_com_cfs__Translation__c/fields/clofor_com_cfs__kh__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__kh__c</fullName>
    <label>kh</label>
    <length>255</length>
    <type>Text</type>
</CustomField>