force-app/main/default/objects/clofor_com_cfs__Translation__c/fields/clofor_com_cfs__ko__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ko__c</fullName>
    <description>in Korean</description>
    <inlineHelpText>in Korean</inlineHelpText>
    <label>ko</label>
    <length>255</length>
    <type>Text</type>
</CustomField>