force-app/main/default/objects/clofor_com_cfs__Translation__c/fields/clofor_com_cfs__zh_TW__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__zh_TW__c</fullName>
    <description>in Chinese (Traditional)</description>
    <inlineHelpText>in Chinese (Traditional)</inlineHelpText>
    <label>zh_TW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>