force-app/main/default/objects/clofor_com_cfs__Translation__c/listViews/clofor_com_cfs__ALL_RECORDS.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__ALL_RECORDS</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__Active__c</columns>
    <columns>clofor_com_cfs__Context__c</columns>
    <columns>clofor_com_cfs__en_US__c</columns>
    <columns>clofor_com_cfs__ja__c</columns>
    <columns>clofor_com_cfs__ko__c</columns>
    <columns>clofor_com_cfs__vi__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>ALL RECORDS</label>
    <language>en_US</language>
</ListView>