force-app/main/default/objects/clofor_com_cfs__Translation__c/listViews/clofor_com_cfs__ALL_RECORDS1.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__ALL_RECORDS1</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__Active__c</columns>
    <columns>clofor_com_cfs__Context__c</columns>
    <columns>clofor_com_cfs__en_US__c</columns>
    <columns>clofor_com_cfs__ja__c</columns>
    <columns>clofor_com_cfs__ko__c</columns>
    <columns>clofor_com_cfs__vi__c</columns>
    <columns>clofor_com_cfs__zh_CN__c</columns>
    <columns>clofor_com_cfs__zh_TW__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>clofor_com_cfs__en_US__c</field>
        <operation>equals</operation>
        <value>Day</value>
    </filters>
    <label>ALL RECORDS Thong</label>
    <language>en_US</language>
</ListView>