force-app/main/default/objects/clofor_com_cfs__Translation__c/listViews/clofor_com_cfs__MASS_NEW_AND_UPDATE.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__MASS_NEW_AND_UPDATE</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__Active__c</columns>
    <columns>clofor_com_cfs__Context__c</columns>
    <columns>clofor_com_cfs__en_US__c</columns>
    <columns>clofor_com_cfs__ja__c</columns>
    <columns>clofor_com_cfs__ko__c</columns>
    <columns>clofor_com_cfs__vi__c</columns>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>SETUP_TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>MASS</value>
    </filters>
    <label>MASS NEW AND UPDATE</label>
    <language>ko</language>
</ListView>