force-app/main/default/objects/clofor_com_cfs__Translation__c/listViews/clofor_com_cfs__PROFIT_SHEET.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__PROFIT_SHEET</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__Active__c</columns>
    <columns>clofor_com_cfs__Context__c</columns>
    <columns>clofor_com_cfs__en_US__c</columns>
    <columns>clofor_com_cfs__ja__c</columns>
    <columns>clofor_com_cfs__ko__c</columns>
    <columns>clofor_com_cfs__vi__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>clofor_com_cfs__Context__c</field>
        <operation>equals</operation>
        <value>Profit_Sheet</value>
    </filters>
    <label>PROFIT SHEET</label>
    <language>en_US</language>
</ListView>