force-app/main/default/objects/clofor_com_cfs__Translation__c/listViews/clofor_com_cfs__SearcByName.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__SearcByName</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__Active__c</columns>
    <columns>clofor_com_cfs__en_US__c</columns>
    <columns>clofor_com_cfs__ja__c</columns>
    <columns>clofor_com_cfs__ko__c</columns>
    <columns>clofor_com_cfs__vi__c</columns>
    <columns>clofor_com_cfs__zh_CN__c</columns>
    <columns>clofor_com_cfs__kh__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>diff</value>
    </filters>
    <label>Search by name</label>
    <language>en_US</language>
</ListView>